2007-09-14  Sébastien Sablé  <sable@users.sourceforge.net>

	* sybasect.c: Expose sybase date type functions

2007-08-28  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Refactoring - merged Fetchers, CTCursor and CmdCursor
	in Cursor

2007-08-08  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py, doc/dbapi.tex: Additional 'locale' argument to
	connect and Connection to set the locale of the connection thanks
	to patch by Harri Pasanen

	* Sybase.py: Corrected syntax specific to python 2.5

	* setup.py: Using setuptools

2007-08-06  Sébastien Sablé  <sable@users.sourceforge.net>

	* Added support for python Decimal objects in databuf

	* Sybase.py: Using ct_cursor for select requests

2007-07-30  Sébastien Sablé  <sable@users.sourceforge.net>

	* doc/ctxobj.tex, doc/localeobj.tex: Corrected documentation about
	CS_CONTEXT Objects thanks to bug report by Derek Harland (close
	tracker 1748109)

	* Sybase.py: Corrected bug in close() if connection killed from
	outside thanks to patch by Derek Harland (close tracker 1746220)

	* Sybase.py: Corrected bug if inherit from Sybase.Connection
	thanks to patch by Derek Harland (close tracker 1719789)

	* Sybase.py: Optimization in fetchall - using fetchmany instead of
	fetchone to avoid locking time penalty, thanks to patch by Derek
	Harland (close tracker 1746908)

	* freetds.h, setup.py: Corrections to compile with bcp-support
	against freetds thanks to patch by Klaus-Martin Hansche (close
	tracker 1724088)

	* MANIFEST.in: Added test suites to distribution

2007-07-23  Sébastien Sablé  <sable@users.sourceforge.net>

	* Better compliance with DBAPI: returns None in nextset when no
	more set

2007-05-22  Sébastien Sablé  <sable@users.sourceforge.net>

	* Add metadata for pypi

2007-05-15  Sébastien Sablé  <sable@users.sourceforge.net>

	* doc/installation.tex: Corrected documentation to compile with
	FreeTDS and Threads thanks to Derek Harland (close tracker
	1709043)
